[package]
name = "muninn-frames"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Shared realtime frame model and protobuf codec for WebSocket transport"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ianzepp/muninn-frames-rs"
homepage = "https://github.com/ianzepp/muninn-frames-rs"
documentation = "https://github.com/ianzepp/muninn-frames-rs"
keywords = ["frames", "protobuf", "websocket", "realtime", "codec"]
categories = ["encoding", "network-programming"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
collapsible_else_if = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
unnecessary_map_or = "allow"
unnecessary_result_map_or_else = "allow"
